--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -113,6 +113,7 @@
         <item translatable="false">@string/file_template__md_markor_markdown_reference</item>
         <item translatable="false">@string/file_template__txt_todo_sample</item>
         <item translatable="false">@string/file_template__md_jekyll_post</item>
+        <item translatable="false">@string/file_template__ad_jekyll_post</item>
         <item translatable="false">@string/file_template__md_cooking_recipe</item>
         <item translatable="false">@string/file_template__md_presentation_beamer</item>
         <item translatable="false">@string/file_template__zim_wiki_reference</item>
