--- a/app/src/main/res/layout/document__activity.xml
+++ b/app/src/main/res/layout/document__activity.xml
@@ -16,7 +16,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:theme="@style/AppTheme.Unified"
-    tools:context="web.gsantner.markor.activity.DocumentActivity">
+    tools:context="net.gsantner.markor.activity.DocumentActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
